--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -58,16 +58,6 @@ hr.star-primary {
     text-align: center;
 }
 
-hr.star-light:after,
-hr.star-primary:after {
-    content: "\f005";
-    display: inline-block;
-    position: relative;
-    top: -.8em;
-    padding: 0 .25em;
-    font-family: FontAwesome;
-    font-size: 2em;
-}
 
 hr.star-light {
     border-color: #fff;
@@ -274,7 +264,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(24,188,156,.9);
+    background: #00B4E4;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -360,7 +350,7 @@ background-attachment: fixed;
       transition: all .3s;
 }
 form {
-  padding: 10px;
+  padding: 2rem;
 }
 .floating-label-form-group {
     position: relative;
@@ -469,7 +459,7 @@ footer .footer-below {
     height: 50px;
     border-radius: 100%;
     font-size: 20px;
-    line-height: 28px;
+      line-height: 2.3rem;
 }
 
 .scroll-top .btn:focus {
