--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -258,6 +258,11 @@ section.success {
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     transition: all .3s ease-in-out;
 }
+.material-shadow {
+
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transition: all .3s ease-in-out;
+}
 
 #portfolio .portfolio-item .portfolio-link .caption {
     position: absolute;
