--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -307,6 +307,16 @@ section.success {
 background: #FDCF41  url("../img/pattern.png") repeat;
 background-attachment: fixed;
 }
+#contact .a-color
+
+{
+  color: #212529;
+}
+
+#contact ul li a {
+
+  color:white;
+}
 .box-contact{
 
   background: white;
@@ -341,18 +351,7 @@ background-attachment: fixed;
     border-radius: 50px;
     background: #fff;
 }
-.btn-success{
-  background-color: #00B4E4;
-      border-color: #00B4E4;
 
-}
-
-.btn-success:hover{
-  background-color: #FDCF41;
-      border-color: #FDCF41;
-      color: #00B4E4;
-
-}
 form {
   padding: 2rem;
 }
@@ -436,7 +435,7 @@ footer .footer-below {
     display: inline-block;
     width: 60px;
     height: 60px;
-    border: 2px solid #fff;
+
     border-radius: 100%;
     text-align: center;
     font-size: 30px;
@@ -448,26 +447,100 @@ footer .footer-below {
 .btn.active {
     outline: 0;
 }
+/* demo style */
 
-.scroll-top {
-    z-index: 1049;
-    position: fixed;
-    right: 2%;
-    bottom: 2%;
-    width: 50px;
-    height: 50px;
+.cd-nugget-info {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  top: 0;
+  left: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.cd-nugget-info a {
+  position: relative;
+  font-size: 14px;
+  color: #e86256;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.cd-nugget-info a:hover {
+  opacity: .8;
+}
+.cd-nugget-info span {
+  vertical-align: middle;
+  display: inline-block;
+}
+.cd-nugget-info span svg {
+  display: block;
+}
+.cd-nugget-info .cd-nugget-info-arrow {
+  fill: #00B4E4;
 }
 
-.scroll-top .btn {
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    font-size: 20px;
-      line-height: 2.3rem;
+.cd-top {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  position: fixed;
+  bottom: 40px;
+  right: 10px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  /* image replacement properties */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  background: #00B4E4 url(../img/cd-top-arrow.svg) no-repeat center 50%;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity .3s 0s, visibility 0s .3s, background-color .3s 0s;
+  transition: opacity .3s 0s, visibility 0s .3s, background-color .3s 0s;
 }
 
-.scroll-top .btn:focus {
-    outline: 0;
+.cd-top.cd-top--show,
+.cd-top.cd-top--fade-out,
+.cd-top:hover {
+  -webkit-transition: opacity .3s 0s, visibility 0s 0s, background-color .3s 0s;
+  transition: opacity .3s 0s, visibility 0s 0s, background-color .3s 0s;
+}
+
+.cd-top.cd-top--show {
+  /* the button becomes visible */
+  visibility: visible;
+  opacity: 1;
+}
+
+.cd-top.cd-top--fade-out {
+  /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
+  opacity: .5;
+}
+
+.cd-top:hover {
+  background-color: #00B4E4;
+  opacity: 1;
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+@media only screen and (min-width: 768px) {
+  .cd-top {
+    right: 20px;
+    bottom: 20px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .cd-top {
+    height: 60px;
+    width: 60px;
+    right: 30px;
+    bottom: 30px;
+  }
 }
 
 .portfolio-modal .modal-content {
